objects/CS001_JDEInterfaceCredentials__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Account_Notify__c</fullName>
        <description>Used for the Account Notify Web Service</description>
        <label>Account Notify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Country</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EndPointPaymentApproveReproveDA__c</fullName>
        <description>EndPoint_PaymentApproveReproveDA</description>
        <label>EndPoint_PaymentApproveReproveDA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPointPaymentCancelDA__c</fullName>
        <label>EndPoint_PaymentCancelDA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPointPaymentCreateDA__c</fullName>
        <description>EndPoint_PaymentCreateDA</description>
        <label>EndPoint_PaymentCreateDA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint_BalanceCheck__c</fullName>
        <label>EndPoint BalanceCheck</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint_ContractManager__c</fullName>
        <label>EndPoint ContractManager</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint_CustomerHandler__c</fullName>
        <label>EndPoint CustomerHandler</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint_CustomerVerify__c</fullName>
        <label>EndPoint CustomerVerify</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint_Customer_Credit_Status__c</fullName>
        <label>EndPoint Customer Credit Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint_GetStock__c</fullName>
        <label>EndPoint GetStock</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint_NewPriceCalculation__c</fullName>
        <description>For use when the price calc is migrated to the new service</description>
        <inlineHelpText>For use when the price calc is migrated to the new service</inlineHelpText>
        <label>New Price Calculation Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint_PaymentManager__c</fullName>
        <label>EndPoint PaymentManager</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint_PaymentProductManager__c</fullName>
        <label>EndPoint Payment Product Manager</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint_PriceCalculation__c</fullName>
        <label>EndPoint PriceCalculation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint_RVManager__c</fullName>
        <label>EndPoint RVManager</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint_ReceiptHandeler__c</fullName>
        <label>EndPoint ReceiptHandeler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint_SalesOrderHandler__c</fullName>
        <label>EndPoint SalesOrderHandler</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpont_PaymentMoneyStatusME__c</fullName>
        <label>Endpont PaymentMoneyStatusME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpont_PaymentProductStatusME__c</fullName>
        <description>Endpoint for checking the status on ME of Product Payments</description>
        <label>Endpont PaymentProductStatusME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exec_new_Price_Calc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Execute the new Price Calculation Service (migration use only)</description>
        <inlineHelpText>Execute the new Price Calculation Service (migration use only)</inlineHelpText>
        <label>Execute new Price Calculation Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_CheckStock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if the shopping cart validates Stocks values from JDE when creating an Opportunity.</description>
        <inlineHelpText>Defines if the shopping cart validates Stocks values from JDE when creating an Opportunity.</inlineHelpText>
        <label>Check Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MASHERY_HEADER_KEY__c</fullName>
        <label>MASHERY HEADER KEY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceCalcCompanyParam__c</fullName>
        <label>Price Calc company Param</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceCalcCurrencyParam__c</fullName>
        <description>Calc currency param for price calc</description>
        <label>Price Calc Currency Param</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceCalcProcessingVersionParam__c</fullName>
        <description>param for price calculation</description>
        <inlineHelpText>param for price calculation</inlineHelpText>
        <label>Price Calc Processing version Param</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemoteHostIP__c</fullName>
        <label>RemoteHostIP</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemUserID__c</fullName>
        <label>SystemUserID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UseIMM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Usage of IMM if unchecked use ME</description>
        <inlineHelpText>Usage of IMM if unchecked use ME</inlineHelpText>
        <label>UseIMM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <description>If SOR returns for an Opportunity that has an inactive user, the Ownership of the Opportuntiy will be reassign to this UserName.</description>
        <label>UserName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>CS001_JDEInterfaceCredentials</label>
    <listViews>
        <fullName>all</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>EndPoint_CustomerHandler__c</columns>
        <columns>EndPoint_SalesOrderHandler__c</columns>
        <columns>EndPoint_PriceCalculation__c</columns>
        <columns>UserName__c</columns>
        <filterScope>Everything</filterScope>
        <label>all</label>
        <language>en_US</language>
    </listViews>
</CustomObject>